--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vueuse/motion": "^2.0.0-beta.12",
     "chalk": "^5.2.0",
     "dayjs": "^1.11.7",
     "element-plus": "^2.3.4",
+    "nprogress": "^0.2.0",
     "pinia": "^2.0.36",
     "vue": "^3.3.2",
     "vue-router": "^4.2.0"
@@ -32,6 +34,7 @@
     "unplugin-auto-import": "^0.16.0",
     "unplugin-icons": "^0.16.1",
     "unplugin-vue-components": "^0.24.1",
-    "vite": "^4.3.5"
+    "vite": "^4.3.5",
+    "vite-svg-loader": "^4.0.0"
   }
 }
