request and login

--- a/.env.development
+++ b/.env.development
@@ -3,4 +3,4 @@
 
 # 只有以 VITE_ 为前缀的变量才会暴露给经过 vite 处理的代码
 # 本地环境接口地址
-# VITE_BASE_URL = 'https://mock.apifox.cn/m1/2303444-0-default'
+VITE_BASE_URL = 'https://www.cjienc.cn:9123/api'
