--- a/package.json
+++ b/package.json
@@ -7,15 +7,25 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "preinstall": "npx only-allow pnpm"
   },
+  "browserslist": [
+    "> 1%",
+    "not ie 11",
+    "not op_mini all"
+  ],
   "dependencies": {
     "@vueuse/motion": "^2.0.0-beta.12",
+    "axios": "^1.4.0",
     "chalk": "^5.2.0",
     "dayjs": "^1.11.7",
     "element-plus": "^2.3.4",
+    "lodash": "^4.17.21",
+    "md5": "^2.3.0",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.36",
+    "qs": "^6.11.2",
     "vue": "^3.3.2",
     "vue-router": "^4.2.0"
   },
@@ -26,8 +36,11 @@
     "@vitejs/plugin-vue-jsx": "^3.0.1",
     "@vue/eslint-config-prettier": "^7.1.0",
     "autoprefixer": "^10.4.14",
+    "cssnano": "^6.0.1",
     "eslint": "^8.39.0",
     "eslint-plugin-vue": "^9.11.0",
+    "postcss": "^8.4.23",
+    "postcss-import": "^15.1.0",
     "prettier": "^2.8.8",
     "sass": "^1.62.1",
     "tailwindcss": "^3.3.2",
