--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "chalk": "^5.2.0",
     "dayjs": "^1.11.7",
     "element-plus": "^2.3.4",
+    "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "md5": "^2.3.0",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.36",
+    "pinia-plugin-persistedstate": "^3.1.0",
     "qs": "^6.11.2",
     "vue": "^3.3.2",
     "vue-router": "^4.2.0"
